# invoice-copilot

./: README.md
client/: .gitignore  README.md  index.html  package.json  tsconfig.app.json
client/src/: App.test.tsx  App.tsx  index.css
client/src/components/: InvoiceDetail.tsx  InvoiceList.tsx  InvoiceOcrCard.tsx  InvoiceUploader.tsx
client/src/components/ui/: tabs.tsx
client/src/lib/: format.test.ts  format.ts
client/src/pages/: Dashboard.tsx  LandingPage.tsx
server/: .gitignore  README.md  pyproject.toml
server/app/: main.py  ocr.py
server/app/core/: config.py  database.py
server/app/models/: __init__.py  invoice.py  invoice_item.py
server/app/repository/: invoices.py
server/app/routes/: invoices.py  ocr.py
server/app/schemas/: invoices.py  ocr.py
server/app/services/: extractor.py  invoices.py  ocr.py
server/tests/: test_main.py  test_ocr.py
