[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "groq>=1.5.0",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "rapidocr-onnxruntime>=1.4.4",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
